# Calorimeter-Energy-Resolution-Analysis

./: Lecture20.ipynb  README.md  check_jackknife.py  pyproject.toml  results.json  sample.csv
notebooks/: instructions.ipynb  my_notes.ipynb  results.json  solutions.ipynb
problem_sheets/: S1_ProblemSheet_1.ipynb  S1_ProblemSheet_2.ipynb  S1_ProblemSheet_3.ipynb
s1_sol/: bootstrap_analysis.py  data_loader.py  estimators.py  example.py  fitting.py  mle_fits.py  plotting.py  simultaneous_fit.py
s1_sol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
